test/org/midica/testfiles/failing/include-soundfont-inside-macro.midica
INCLUDE_FILE inc/instruments.midica

0 c /4

MACRO test
	SOUNDFONT ../working/java-emergency-soundfont.sf2
END
